Fix footer jump when changing the selection

--- a/src/app/data-visualization-bar/data-visualization-bar.component.scss
+++ b/src/app/data-visualization-bar/data-visualization-bar.component.scss
@@ -14,6 +14,8 @@ mat-card {
   &.small {
     flex-grow: 1;
     min-width: 200px;
+    height: 100%;
+    max-height: 450px;
     width: 300px;
   }
 }
